k8s/ingress/inventory-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-ingress
  annotations:
    nginx.org/proxy-connect-timeout: "30s"
    nginx.org/proxy-read-timeout: "20s"

spec:
  ingressClassName: nginx
  rules:
    - host: inventory.frontend
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inventory-app-svc
                port:
                  number: 8080
    - host: inventory.backend
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inventory-api-svc
                port:
                  number: 8080
